Fixed some layout issues

--- a/ddp-workspace/projects/ddp-singular/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-singular/src/app/components/header/header.component.scss
@@ -67,6 +67,8 @@ a:not(.button) {
 
   &__logo-img {
     height: 100%;
+    position: relative;
+    top: -13px;
   }
 
   &__nav {
