--- a/ddp-workspace/projects/ddp-singular/src/app/components/pages/home/home.component.scss
+++ b/ddp-workspace/projects/ddp-singular/src/app/components/pages/home/home.component.scss
@@ -17,6 +17,9 @@
       line-height: 46px;
     }
   }
+  .partners-list-item a {
+    border: 0;
+  }
 
   .header {
     &-title {
@@ -60,7 +63,7 @@
   .about {
     margin-top: 100px;
 
-    background: linear-gradient(to right, #d1f9f4 50%, transparent 50%);
+    background: linear-gradient(to right, #A2F4E9 50%, transparent 50%);
 
     @media (max-width: 960px) {
       background: transparent;
@@ -195,7 +198,7 @@
     }
     & p {
       font-size: 18px;
-      margin-bottom: 24px;
+      margin-bottom: 18px;
     }
   }
 }
@@ -229,6 +232,7 @@
     }
   }
   &-right {
+    max-width: 600px;
     margin-top: 90px;
     @include media-md {
       margin-top: unset;
@@ -244,7 +248,7 @@
     &-item {
       position: relative;
       margin-bottom: 40px;
-      padding-right: 60px;
+      padding-right: 10px;
       @include media-md {
         padding-right: unset;
       }
